Closed #191: Solved the bug with the misaligned icon

--- a/antxetamedia/static/css/player.sass
+++ b/antxetamedia/static/css/player.sass
@@ -70,12 +70,14 @@ div#player
     text-align: right
     position: absolute
     bottom: -.6em
-    right: 0
     padding:  0 .25rem .15rem .25rem
     font-size: 1rem
     z-index: 1
     color: tint(black, 85%)
     background: tint(black, 5%)
+    right: .05em
+    +media(max-width $medium)
+      right: 0em
 
 #playlist
   background: tint(black, 90%)
